# AirBloom

./: .gitattributes  .gitignore  AirBloom.jucer  CMakeLists.txt  README.md
.github/workflows/: main.yml
JuceLibraryCode/: BinaryData.cpp.REMOVED.git-id  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: AirBloomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
